# AWS-Sagemaker

./: .gitignore  .pre-commit-config.yaml  README.md  build_and_push.sh  pyproject.toml  requirements.txt  sagemaker_config.py
.github/workflows/: codeql.yml
AWS_Personalise/movies/: env.yml  recommendation_movies.ipynb
Deepracer/: README.md  requirements.txt  reward.py
Deepracer/log-analysis/: DeepRacer Log Analysis.ipynb  Training_analysis.ipynb  log_analysis.py
Deepracer/log-analysis/.ipynb_checkpoints/: Training_analysis-checkpoint.ipynb
Sagemaker/.ipynb_checkpoints/: session_initialisation-checkpoint.py
Sagemaker/utils/: config.py
Setup/: Filezilla-to_AWSinstance.docx  setting up an instance and ssh.txt  setting_jupyternotebook.txt
abalone/: constants.py  io.py  preprocessing.py
abalone/.ipynb_checkpoints/: preprocessing-checkpoint.py
data/abalone/test/: test.csv
data/abalone/train/: train.csv
data/abalone/validation/: validation.csv
data/video_games/: raw_data.csv  test.csv  train.csv  validation.csv
image-classification/: Image-classification-food.ipynb
notebooks/: video-games.ipynb
src/: utils.py
src/abalone/: constants.py  io.py  preprocessing.py  sagemaker_pipeline.py
src/catboost_reviews/: Dockerfile  Dockerfile.inference  Dockerfile.train  README.md  build_and_push.sh  process.py  remote_train.py  requirements.txt  sm_job_exec.py  train.py  training_job_exec.py
src/catboost_reviews/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
src/catboost_reviews/inference/: Dockerfile  predict.py  serve.py
src/catboost_reviews/training/: process.py  train.py
src/hugging_face_sagemaker/distilbert-base-uncased/: README.md  predict.py  preprocess.py  training_job.py
src/hugging_face_sagemaker/distilbert_base_uncased/: README.md  predict.py  preprocess.py  training_job.py
src/sagemaker_pipelines/: inference_job.py  preprocessing_job.py  training_job.py
src/video_games/: predict.py  preprocess.py  training_job.py
terraform-sagemaker/: iam.tf  main.tf  output.tf  variables.tf
utils/: aws_helper.py  pipeline_params.py  sagemaker_config.py  session_initialisation.py
(+16 files in other folders)
