[tool.poetry]
name = "aws-ml"
version = "0.1.0"
description = "List of practical example on AWS Sagemaker as prep for AWS ML certification"
authors = ["Ryan Nazareth <ryankarlos@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.1"
poetry = "^1.1.6"
pandas = "^1.2.4"
boto3 = "^1.17.84"
sagemaker = "^2.43.0"
scikit-learn = "^0.24.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
