[tool.poetry]
name = "aws-ml"
version = "0.1.0"
description = "List of practical example on AWS Sagemaker"
authors = ["Ryan Nazareth <ryankarlos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.0"
poetry = "^1.1.6"
pandas = "^1.5.2"
sagemaker = "^2.126.0"
pyarrow = ">=6.0.0"
boto3 = "^1.26.37"
transformers = "^4.25.1"
datasets = {extras = ["s3"], version = "^2.8.0"}
imageio = "^2.23.0"
tqdm = "^4.64.1"
numpy = "^1.24.0"
matplotlib = "^3.6.2"
scikit-learn = "^1.2.0"
torch = "<=1.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
