[tool.poetry]
name = "aws-ml"
version = "0.1.0"
description = "List of practical example on AWS Sagemaker"
authors = ["Ryan Nazareth <ryankarlos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.0"
poetry = "^1.1.6"
pandas = "^1.5.2"
sagemaker = "^2.126.0"
pyarrow = ">=6.0.0"
boto3 = "^1.26.37"
transformers = "^4.25.1"
datasets = {extras = ["s3"], version = "^2.8.0"}
imageio = "^2.23.0"
tqdm = "^4.64.1"
numpy = "^1.24.0"
matplotlib = "^3.6.2"
scikit-learn = "^1.2.0"
torch = "<=1.12.0"

[tool.poetry.dev-dependencies]
black = ">=22.12.0"
isort = ">=5.11.4"
flake8 = ">=6.0.0"
mypy = ">=0.991"
pre-commit = ">=2.21.0"

[tool.isort]
atomic = true
profile = "black"
line_length = 88
skip_gitignore = true


[tool.mypy]
warn_unused_ignores = true
follow_imports = "skip"
ignore_missing_imports = true
strict_optional = true


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
